@@ -330,7 +330,7 @@ EOF
 EOF
 
         backup_file ${DOVECOT_LDAP_CONF}
-        cp -f ${SAMPLE_DIR}/conf/dovecot-ldap.conf ${DOVECOT_LDAP_CONF}
+        cp -f ${SAMPLE_DIR}/dovecot/dovecot-ldap.conf ${DOVECOT_LDAP_CONF}
 
         perl -pi -e 's#PH_LDAP_SERVER_HOST#$ENV{LDAP_SERVER_HOST}#' ${DOVECOT_LDAP_CONF}
         perl -pi -e 's#PH_LDAP_SERVER_PORT#$ENV{LDAP_SERVER_PORT}#' ${DOVECOT_LDAP_CONF}
@@ -355,7 +355,7 @@ EOF
 EOF
 
         backup_file ${DOVECOT_MYSQL_CONF}
-        cp -f ${SAMPLE_DIR}/conf/dovecot-sql.conf ${DOVECOT_MYSQL_CONF}
+        cp -f ${SAMPLE_DIR}/dovecot/dovecot-sql.conf ${DOVECOT_MYSQL_CONF}
 
         perl -pi -e 's#PH_SQL_DRIVER#mysql#' ${DOVECOT_MYSQL_CONF}
         perl -pi -e 's#PH_SQL_SERVER#$ENV{MYSQL_SERVER}#' ${DOVECOT_MYSQL_CONF}
@@ -456,7 +456,7 @@ CREATE DATABASE IF NOT EXISTS ${IREDADMIN_DB_NAME} DEFAULT CHARACTER SET utf8 CO
 
 # Import SQL template.
 USE ${IREDADMIN_DB_NAME};
-SOURCE ${SAMPLE_DIR}/used_quota.sql;
+SOURCE ${SAMPLE_DIR}/dovecot/used_quota.sql;
 GRANT SELECT,INSERT,UPDATE,DELETE ON ${IREDADMIN_DB_NAME}.* TO "${IREDADMIN_DB_USER}"@localhost IDENTIFIED BY "${IREDADMIN_DB_PASSWD}";
 
 FLUSH PRIVILEGES;
@@ -535,7 +535,7 @@ CREATE DATABASE IF NOT EXISTS ${IREDADMIN_DB_NAME} DEFAULT CHARACTER SET utf8 CO
 
 # Import SQL template.
 USE ${IREDADMIN_DB_NAME};
-SOURCE ${SAMPLE_DIR}/imap_share_folder.sql;
+SOURCE ${SAMPLE_DIR}/dovecot/imap_share_folder.sql;
 GRANT SELECT,INSERT,UPDATE,DELETE ON ${IREDADMIN_DB_NAME}.* TO "${IREDADMIN_DB_USER}"@localhost IDENTIFIED BY "${IREDADMIN_DB_PASSWD}";
 
 FLUSH PRIVILEGES;
@@ -544,7 +544,7 @@ EOF
     fi
 
     ECHO_DEBUG "Copy sample sieve global filter rule file: ${DOVECOT_GLOBAL_SIEVE_FILE}.sample."
-    cp -f ${SAMPLE_DIR}/dovecot.sieve ${DOVECOT_GLOBAL_SIEVE_FILE}.sample
+    cp -f ${SAMPLE_DIR}/dovecot/dovecot.sieve ${DOVECOT_GLOBAL_SIEVE_FILE}.sample
     chown ${VMAIL_USER_NAME}:${VMAIL_GROUP_NAME} ${DOVECOT_GLOBAL_SIEVE_FILE}.sample
     chmod 0500 ${DOVECOT_GLOBAL_SIEVE_FILE}.sample
 
@@ -610,7 +610,7 @@ ${DOVECOT_LOG_FILE} {
     compressext .bz2
 
     postrotate
-        ${SYSLOG_POSTROTATE_CMD}
+        /bin/kill -USR1 \$(cat ${DOVECOT_MASTER_PID} 2>/dev/null) 2> /dev/null || true
     endscript
 }
 EOF
@@ -624,7 +624,7 @@ ${SIEVE_LOG_FILE} {
     create 0666 ${VMAIL_USER_NAME} ${VMAIL_GROUP_NAME}
     missingok
     postrotate
-        ${SYSLOG_POSTROTATE_CMD}
+        /bin/kill -USR1 \`cat ${DOVECOT_MASTER_PID} 2>/dev/null\` 2> /dev/null || true
     endscript
 }
 EOF
